# edge_ai_api

./: .cursorignore  .env.example  .gitignore  .pre-commit-config.yaml  API_document.md  BUILD.md  CMakeLists.txt  EDGE_AI_API.postman_collection.json  GPU_CPU_FALLBACK_GUIDE.md  LICENSE.md  LICENSE_GPLv2.md  LOG_ANALYSIS.md  POST_CONFIG_RECORD_OUTPUT_DESCRIPTION.md  PRODUCTION_READINESS_REPORT.md  QUICK_START.md  README.md  ReleaseNotes.md  SECURITY_ISSUES_REPORT.md  VERSION  build.sh  build_deb.sh  config.json  debug_file_source.sh  find_instance_info.sh  instance.json  main.cpp  mediamtx.yml  openapi.yaml  setup.sh  version_manifest_2026.0.1.3.txt
.cursor/plans/: lines-management-api-implementation-3b38908d.plan.md
api-specs/: README.md  openapi.yaml  swagger.json
api-specs/postman/: api.collection.json
api-specs/scalar/: index.html
bottleneck_analysis/: copies.txt  locks.txt  sleeps.txt
debian/: README.md  bundle_libs.sh  changelog  control  postinst  postrm  prerm  rules
deploy/: PERMISSIONS_GUIDE.md  QUICK_START.md  README.md  build.sh  create_directories.sh  deploy.sh  directories.conf  edge-ai-api.service  fix_external_data_permissions.sh  install_directories.sh  reinstall_gstreamer.sh  set_full_permissions.sh  setup_face_database.sh
docs/: ANALYSIS_MQTT_VS_RTMP_QUEUE_CRASH.md  API.md  API_REFERENCE.md  API_document.md  ARCHITECTURE.md  CMAKE_FIXES.md  CMAKE_FIXES_APPLIED.md  CMAKE_ISSUES_ANALYSIS.md  COMPLETE_RECORD_OUTPUT_TROUBLESHOOTING.md  CONFIG_API_GUIDE.md  CONFIG_FILES_ANALYSIS.md  CONFIG_IMPACT_ON_INSTANCES.md  CRASH_ANALYSIS_QUEUE_DEADLOCK.md  CRASH_ANALYSIS_RTSP_MQTT_DEADLOCK.md  CREATE_INSTANCE_GUIDE.md  CVEDIX_JSON_MQTT_BROKER_NODE_API.md  CVEDIX_SDK_INSTALL.md  DEBUG_CRASH_AND_MQTT.md  DEFAULT_SOLUTIONS_QUICK_START.md  DEFAULT_SOLUTIONS_REFERENCE.md  DEVELOPMENT.md  DEVELOPMENT_GUIDE.md  DEVELOPMENT_SETUP.md  DIRECTORY_CREATION_GUIDE.md  DROGON_SETUP.md  ENVIRONMENT_VARIABLES.md  FACE_DATABASE_CONNECTION.md  FACE_DATABASE_QUICK_START.md  FACE_DATABASE_TROUBLESHOOTING.md  FACE_DETECTION_RTMP_API.md  FACE_RECOGNITION_API.md  FIX_RECORD_OUTPUT_STEPS.md  FLEXIBLE_INPUT_OUTPUT.md  FLOW_DIAGRAM.md  FRAME_API.md  GETTING_STARTED.md  GIT_HISTORY_CLEANUP.md  GSOAP_IMPLEMENTATION_STATUS.md  GSOAP_INTEGRATION.md  GSOAP_LICENSE_ANALYSIS.md  (+48 more)
examples/: README.md  RECOGNITION_API_TEST_README.md  example_face_detection_rtmp.json  test_recognition_api.py
examples/default_solutions/: README.md  ba_crossline_default.json  ba_crossline_mqtt_default.json  ba_jam_default.json  ba_jam_mqtt_default.json  ba_stop_default.json  ba_stop_mqtt_default.json  create_solution.sh  face_detection_default.json  face_detection_file_default.json  face_detection_rtmp_default.json  face_detection_rtsp_default.json  index.json  list_solutions.sh  mask_rcnn_detection_default.json  mask_rcnn_rtmp_default.json  minimal_default.json  object_detection_yolo_default.json  rtsp_face_detection_default.json
examples/docs/: README.md  ba_crossline_rtmp_pipeline.md  face_swap_pipeline.md  insightface_recognition_pipeline.md  mllm_analysis_pipeline.md  new_solutions_overview.md  wrong_node_order_warning.md  yolov11_detection_pipeline.md
monitor/: README.md  dashboard.py  instance_monitor.csv
packaging/: AUTO_VERSION.md  ORGANIZATION_SUMMARY.md  README.md
samples/: BUILD_AND_RUN.md  CMakeLists.txt  QUICK_FIX.md  build.sh  cvedix_mqtt_json_receiver_impl.cpp  face_tracking_sample.cpp  mqtt_json_receiver_sample.cpp  simple_rtmp_mqtt_sample.cpp  test_mqtt_simple.cpp
scripts/: README.md  analyze_bottlenecks.sh  auto_finalize_recordings.sh  build_opencv_safe.sh  check_opencv_version.sh  check_record_debug.sh  check_record_output.sh  check_rtsp_instance.sh  cleanup_git_history.sh  copy_cvedix_data.sh  create_directories.sh  create_opencv_cuda_stubs.sh  debug_production.sh  debug_record_output.sh  debug_rtsp_pipeline.sh  dev_setup.sh  diagnose_rtsp.sh  fix_all_symlinks.sh  fix_cereal_symlink.sh  fix_cpp_base64_symlink.sh  fix_cvedix_issues.sh  fix_cvedix_symlinks.sh  fix_dependencies.sh  fix_freetype.sh  fix_opencv_symlinks.sh  fix_production_issues.sh  generate_default_solution_template.sh  install_binary.sh  install_dependencies.sh  install_opencv_4.10.sh  load_env.sh  record_output_helper.sh  restart_instance_for_record.sh  restore_default_solutions.sh  rtsp_helper.sh  run_tests.sh  setup.sh  test_register_face.sh  test_rtsp_connection.sh  update_examples_to_input_output_format.py  (+1 more)
src/: main.cpp
task/: ANALYSIS.md  BASE_CODE_SETUP.md  BUILD_SUCCESS.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  SUMMARY.md  WHY_OPENAPI.md  requirement.txt
tests/: CMakeLists.txt  README.md  test_ai_handler.cpp  test_ba_jam_detection_params.cpp  test_ba_jam_pipeline.cpp  test_config_handler.cpp  test_create_instance_handler.cpp  test_endpoints_handler.cpp  test_group_handler.cpp  test_health_handler.cpp  test_instance_configure_stream.cpp  test_instance_get_config.cpp  test_instance_status_summary.cpp  test_instance_storage.cpp  test_instance_update.cpp  test_jams_handler.cpp  test_lines_handler.cpp  test_main.cpp  test_metrics_handler.cpp  test_node_handler.cpp  test_node_pool_handler.cpp  test_recognition_handler.cpp  test_solution_handler.cpp  test_stops_handler.cpp  test_swagger_handler.cpp  test_system_info_handler.cpp  test_version_handler.cpp  test_watchdog_handler.cpp
tests/Auto/: README.md
tests/Auto/Core_API/: test_swagger_handler.cpp  test_system_info_handler.cpp  test_watchdog_handler.cpp
tests/Auto/Instance_Management/: test_instance_configure_stream.cpp  test_instance_storage.cpp  test_instance_update.cpp
tests/Manual/: README.md
tests/manual/: README.md
tests/manual/Analytics/: BA_LOITERING_SOLUTION_TEST.md  LOITERING_CORE_API_TEST.md  SECURT_INSTANCE_WORKFLOW_TEST.md
tests/manual/Core_API/: EVENTS_OUTPUT_MANUAL_TEST.md  SYSTEM_CONFIG_MANUAL_TEST.md
tests/unit/: README.md
tests/unit/Core_API/: test_config_handler.cpp  test_system_handler.cpp
tests/unit/Instance_Management/: test_instance_status_summary.cpp
tests/unit/Recognition/: test_recognition_handler.cpp
(+563 files in other folders)
